--- a/src/assets/scss/_bodyContent.scss
+++ b/src/assets/scss/_bodyContent.scss
@@ -1,3 +1,26 @@
 .bodyContentContainer {
-  margin: 0;
+  width: 96vw;
+  height: fit-content;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 25px;
+  margin-left: 2vw;
+  margin-right: 2vw;
+}
+
+.bodyContentList {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+
+
+// WIDE SCREEN
+
+@media only screen and (min-width: 1500px) {
+  .bodyContentList {
+    width: 1500px;
+  }
 }
