--- a/src/assets/scss/_bookCard.scss
+++ b/src/assets/scss/_bookCard.scss
@@ -1,24 +1,24 @@
 .bookCardContainer {
-  height: 200px;
-  width: 150px;
-  display: flex;
-  flex-direction: column;
-  margin-left: 10px;
-  margin-right: 10px;
+  height: fit-content;
+  width: 200px;
+  display: block;
+  margin: 10px;
   border-radius: 15px;
-  box-shadow: 0px -5px 20px 0px rgba(0, 0, 0, 0.3);
 }
 
 .imgBookCard {
-  background-color: green;
+  height: 100%;
   width: 100%;
-  height: 80%;
-  border-radius: 15px 15px 0px 0px;
+  border-radius: 15px 15px 15px 15px;
+  box-shadow: 0px -5px 20px 0px rgba(0, 0, 0, 0.3);
+  &:hover {
+    cursor: pointer;
+  }
 }
 
-.txtBookCardTitle {
-  width: 100%;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
+// .txtBookCardTitle {
+//   width: 75%;
+//   overflow: hidden;
+//   white-space: nowrap;
+//   text-overflow: ellipsis;
+// }
