--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,5 +1,7 @@
+@import "variables";
 @import "header";
 @import "bodyHeader";
 @import "bodyContent";
 @import "bookCard";
+@import "bookModal";
 @import "misc";
