--- a/src/assets/scss/_bookCard.scss
+++ b/src/assets/scss/_bookCard.scss
@@ -16,7 +16,7 @@
   }
 }
 
-// MOBILE SCREEN 860-max
+// MOBILE SCREEN
 
 @media only screen and (min-width: 0px) and (max-width: 500px) {
   .bookCardContainer{
