--- a/src/assets/scss/_bookModal.scss
+++ b/src/assets/scss/_bookModal.scss
@@ -5,6 +5,13 @@
   flex-direction: row !important;
 }
 
+.modalParentContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
 .contentContainer {
   width: 100%;
   display: flex;
@@ -18,6 +25,8 @@
     margin-bottom: 10px;
   }
 }
+
+
 
 .sectionTitle {
   &> p {
@@ -43,5 +52,47 @@
 @media only screen and (min-width: 1600px) {
   .boxModalContainer {
     width: 1400px !important;
+  }
+}
+
+
+
+// MOBILE SCREEN
+
+@media only screen and (min-width: 0px) and (max-width: 500px) {
+  .boxModalContainer {
+    @include mxBoxModalContainer();
+  }
+
+  .imgBookModalCover {
+    @include mxImgBookModalCover();
+
+    // display: flex;
+    // margin-left: auto;
+    // margin-right: auto;
+    // height: fit-content;
+    // width: 200px;
+  }
+
+  .contentContainer {
+    @include mxContentContainer();
+
+    // overflow-y: hidden;
+    // flex-direction: column;
+    // margin-left: 0;
+    // margin-top: 10px;
+  }
+
+  .modalParentContainer {
+    @include mxModalParentContainer();
+    // display: flex;
+    // flex-direction: column;
+    // overflow-y: auto;
+    // -ms-overflow-style: none;
+    // scrollbar-width: none;
+
+    // &::-webkit-scrollbar {
+    //   display: none;
+    // }
   }
 }
