--- a/src/assets/scss/_bookModal.scss
+++ b/src/assets/scss/_bookModal.scss
@@ -43,6 +43,63 @@
   flex-direction: row;
 }
 
+.modalReadBookContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.btnReadBookBack {
+  position: fixed;
+  z-index: 1002;
+  top: 0;
+  left: 0;
+  margin-top: 10px;
+  margin-left: 10px;
+  text-align: left;
+  width: fit-content;
+}
+
+.carrouselBanner {
+  display: flex;
+  width: 100%;
+  height: fit-content;
+  margin-top: 30px;
+}
+
+.carousel .carousel-status {
+  position: fixed !important;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
+.control-next {
+  position: fixed !important;
+  right: 0 !important;
+}
+
+.carousel .control-prev.control-arrow {
+  background: none !important;
+}
+
+.carousel.carousel-slider .control-arrow:hover {
+  background: none !important;
+}
+
+.carousel .control-next.control-arrow:before {
+  border-left: 8px solid #000 !important;
+}
+
+.carousel .control-prev.control-arrow {
+  position: fixed !important;
+  left: 0 !important;
+}
+
+.carousel .control-prev.control-arrow:before {
+  border-right: 8px solid #000 !important;
+}
+
 
 
 // WIDE SCREEN
